--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,16 @@ body { text-align: center;}
 
 .crossword .square .number {
     position: absolute; top: .2em; left: .2em;font-size: .5em;line-height: .7em;
+    z-index: 1;
+}
+
+.crossword .square input.letter 
+{
+    left: 0; right: 0;
+    top: 0; bottom: 0;
+    position: absolute;
+    text-align: center;
+    font-size: 1em;
 }
 
 @media (max-width: 991px) and (orientation: portrait) {
