--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,8 @@ body { text-align: center;}
     position: absolute;
     text-align: center;
     font-size: 1em;
+    margin: 0;
+    padding: 0;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
