--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,8 @@ body { text-align: center;}
     appearance: none;
     font-family: monospace;
     border-radius: 0;
+    -webkit-border-radius: 0;
+    text-transform: uppercase;
 }
 
 
